Fixed spacing ewww

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ h1 {
 #homeTextDiv {
     height: auto;
     margin-left: 2.5vw;
+    margin-right: 2.5vw;
     font-size: 2.5vw;
     text-align: left;
 }
